--- a/src/Sytafe.Server/appsettings.json.template
+++ b/src/Sytafe.Server/appsettings.json.template
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=../database/app.db"
+    "DefaultConnection": "server=server;user id=userId;password=password;initial catalog=catalog"
   },
   "Jwt": {
     "Audience": "audience",
